--- a/public/css/_utils.scss
+++ b/public/css/_utils.scss
@@ -97,7 +97,7 @@
      -moz-transform: translateY(-100%);
       -ms-transform: translateY(-100%);
           transform: translateY(-100%);
-    //opacity: 0;
+    opacity: 0;
 }
 
 .slideRight{
