--- a/app/views/about.jade
+++ b/app/views/about.jade
@@ -8,16 +8,11 @@ block content
 
         p 
             | Internet references from facebook group community Crazy Cool Website since 2013.<br/>
-            | If you wish to submit join the  → <a href="https://www.facebook.com/groups/393558204075688" taret="_blank">GROUP</a>.
+            | If you wish to submit join the  → <a href="https://www.facebook.com/groups/393558204075688" target="_blank">GROUP</a>.
 
         p 
-            | This website is a proposition from <a href="https://www.facebook.com/groups/393558204075688" taret="_blank">Ahmed Ghazi</a>, coded by himself & designed by <a href="http://www.hervethomas.com" taret="_blank">Thomas Hervé</a>, under the vision of <a href="https://www.facebook.com/ZimmerhacklSebastian" taret="_blank">Sebastian of Zimmerhackl</a>.
+            | This website is a proposition from <a href="https://www.facebook.com/groups/393558204075688" target="_blank">Ahmed Ghazi</a>, coded by himself & designed by <a href="http://www.hervethomas.com" target="_blank">Thomas Hervé</a>, under the vision of <a href="https://www.facebook.com/ZimmerhacklSebastian" target="_blank">Sebastian Zimmerhackl</a>.
 
         p 
             | All rights reserved ©2018 CCWA.<br/>
             | Typeface in use TH Grotesk Semi.
-                
-
-                    
-
-    
