--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -7,7 +7,7 @@ $footerheight: 50px;
 
 /* Colors */
 $bg: #fff;
-$grey: #f3f3f3;
+$grey: #dadada;
 $darkerGrey: #afafaf;
 $color: black;
 $links: gray;
