--- a/app/views/liste.jade
+++ b/app/views/liste.jade
@@ -1,6 +1,6 @@
 each post in posts
     -var color = "000";
-    if post.color && post.color != "00FFFF"
+    if post.color && post.color != "FFFFFF"
         -color = post.color;
 
     .item(id="#{post._id}")
