--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -18,6 +18,9 @@ html(lang='en')
     
       #loader
         img(src="img/loader.png")
+      
+      include footer
+
 
     script(src='/js/jquery.min.js')
     script(src='/js/_plugins.js')
@@ -25,6 +28,7 @@ html(lang='en')
     script(src='/js/search-controller.js')
     script(src='/js/scroll-controller.js')
     script(src='/js/mobile-controller.js')
+    script(src='/js/screensaver-controller.js')
 
     script(src='/js/app.js')
     if title == "pull"
