--- a/public/css/_liste.scss
+++ b/public/css/_liste.scss
@@ -17,7 +17,7 @@
 				width: 100%;
 				overflow: hidden;
 				//transform: translate(-50%, 0);
-				display: flex;
+				//display: flex;
 				letter-spacing: -0.01em;
 				span{
 					//display: inline-block;
