--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2632,6 +2632,47 @@ section {
     .about p a:hover {
       color: #000; }
 
+#screensaver {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 20px;
+  background-color: #dadada;
+  z-index: 99999;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column; }
+  #screensaver .item {
+    font-size: 10vw;
+    line-height: 1em; }
+    #screensaver .item.move {
+      color: white;
+      text-align: center;
+      transform-origin: center; }
+      #screensaver .item.move.accr {
+        animation: screensaver 7s linear 0s infinite; }
+      #screensaver .item.move.time {
+        animation: screensaver 8s linear 0s infinite; }
+    #screensaver .item:nth-child(odd) {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
+      display: flex;
+      justify-content: space-between; }
+
+@keyframes screensaver {
+  0% {
+    transform: translateX(-100%); }
+  100% {
+    transform: translateX(100%); } }
 header {
   background-color: #dadada;
   position: fixed;
@@ -2709,7 +2750,6 @@ header {
         text-overflow: ellipsis;
         width: 100%;
         overflow: hidden;
-        display: flex;
         letter-spacing: -0.01em; }
         .liste .item .title .autoradio span {
           flex-shrink: 0; }
