--- a/app/views/footer.jade
+++ b/app/views/footer.jade
@@ -4,7 +4,7 @@
         div.time #{moment().utcOffset("+01:00").format("HH:mm")}
 
     div.item.move.accr
-        span RUNNING FAST
+        span CRAZY COOL WEBSITES
     
     div.item
         div.city.nyc NEW YORK
