--- a/app/views/footer.jade
+++ b/app/views/footer.jade
@@ -1,18 +1,19 @@
 #screensaver
-    div.item
-        div.city.berlin BERLIN
-        div.time #{moment().utcOffset("+01:00").format("HH:mm")}
+    div.flex
+        div.item
+            div.city.berlin BERLIN
+            div.time #{moment().utcOffset("+01:00").format("HH:mm")}
 
-    div.item.move.accr
-        span CRAZY COOL WEBSITES
-    
-    div.item
-        div.city.nyc NEW YORK
-        div.time #{moment().utcOffset("-05:00").format("HH:mm")}
+        div.item.move.accr
+            span CRAZY COOL WEBSITES
+        
+        div.item
+            div.city.nyc NEW YORK
+            div.time #{moment().utcOffset("-05:00").format("HH:mm")}
 
-    div.item.move.time
-        span #{moment().format("HH:mm")}
+        div.item.move.time
+            span #{moment().format("HH:mm")}
 
-    div.item
-        div.city.tokyo TOKYO
-        div.time #{moment().utcOffset("+09:00").format("HH:mm")}
+        div.item
+            div.city.tokyo TOKYO
+            div.time #{moment().utcOffset("+09:00").format("HH:mm")}
