--- a/public/css/_layout.scss
+++ b/public/css/_layout.scss
@@ -12,52 +12,6 @@ section{
 	min-height: 100vh;
 }
 
-.liste-images{
-
-	min-height: 100vh;
-
-	display: grid;                                                /* 1 */
-	grid-auto-rows: 100px;                                         /* 2 */
-	grid-gap: 0px;                                               /* 3 */
-	grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));   /* 4 */
-
-	// @for $i from 1 through 50{
-	// 	.item-image:nth-child(#{$i}){
-	// 		img{
-	// 			//width: random(calc(25vw)) + px;
-	// 			//width: #{randomNum(200, 400)}px;
-	// 		}
-	// 	}
-	// }
-
-	.item-image{
-		background-color: white;
-		&.small{grid-row: span 1}
-		&.medium{grid-row: span 2}
-		&.large{grid-row: span 3}
-
-		figure{
-			//display: flex;
-			text-align: center;
-			padding: 0 1em;
-			height: 100%;
-			img{
-				margin: 0 auto;
-				max-width: 100%;
-				max-height: 100%;
-				//height: 100%;
-				//width: auto;
-				@include anime(.2s);
-				
-			}
-		}
-		&:hover{
-			//img{width: 100%;}
-		}
-	}
-	
-	
-}
 
 
 
@@ -80,38 +34,42 @@ section{
 }
 
 #screensaver{
-	display: none;
 	position: fixed;
 	top:0; left: 0;
 	width: 100vw; height: 100vh;
 	padding: $padding2;
 	background-color: $grey;
 	z-index: 99999;
-	@include flexbox();
-	justify-content: space-between;
-	flex-direction: column;
-	//mix-blend-mode: difference;
-	.item{
-		font-size: 10vw;
-		line-height: 1em;
-		&.move{
-			color: white;
-			text-align: center;
-			transform-origin:right;
-			white-space: nowrap;
-			&.accr{
-				animation: screensaver 7s linear 0s infinite alternate;
-				
+	display: none;
+	.flex{
+		@include flexbox();
+		justify-content: space-between;
+		flex-direction: column;
+
+		.item{
+			font-size: 10vw;
+			line-height: 1em;
+			&.move{
+				color: white;
+				text-align: center;
+				transform-origin:right;
+				white-space: nowrap;
+				&.accr{
+					animation: screensaver 7s linear 0s infinite alternate;
+					
+				}
+				&.time{
+					animation: screensaver 6s linear 0s infinite  alternate;
+				}
 			}
-			&.time{
-				animation: screensaver 6s linear 0s infinite  alternate;
+			&:nth-child(odd){
+				@include flexbox();
+				justify-content: space-between;
 			}
-		}
-		&:nth-child(odd){
-			@include flexbox();
-			justify-content: space-between;
 		}
 	}
+	
+	
 }
 
 @keyframes screensaver {
