--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2591,34 +2591,6 @@ section {
   padding-top: 124px;
   min-height: 100vh; }
 
-.liste-images {
-  min-height: 100vh;
-  display: grid;
-  /* 1 */
-  grid-auto-rows: 100px;
-  /* 2 */
-  grid-gap: 0px;
-  /* 3 */
-  grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
-  /* 4 */ }
-  .liste-images .item-image {
-    background-color: white; }
-    .liste-images .item-image.small {
-      grid-row: span 1; }
-    .liste-images .item-image.medium {
-      grid-row: span 2; }
-    .liste-images .item-image.large {
-      grid-row: span 3; }
-    .liste-images .item-image figure {
-      text-align: center;
-      padding: 0 1em;
-      height: 100%; }
-      .liste-images .item-image figure img {
-        margin: 0 auto;
-        max-width: 100%;
-        max-height: 100%;
-        transition: all 0.2s ease-in-out 0s; }
-
 .about h2 {
   font-size: 60px;
   margin-bottom: 10px; }
@@ -2633,7 +2605,6 @@ section {
       color: #000; }
 
 #screensaver {
-  display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -2642,32 +2613,34 @@ section {
   padding: 20px;
   background-color: #dadada;
   z-index: 99999;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column; }
-  #screensaver .item {
-    font-size: 10vw;
-    line-height: 1em; }
-    #screensaver .item.move {
-      color: white;
-      text-align: center;
-      transform-origin: right;
-      white-space: nowrap; }
-      #screensaver .item.move.accr {
-        animation: screensaver 7s linear 0s infinite alternate; }
-      #screensaver .item.move.time {
-        animation: screensaver 6s linear 0s infinite  alternate; }
-    #screensaver .item:nth-child(odd) {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -moz-flex;
-      display: -ms-flexbox;
-      display: flex;
-      justify-content: space-between; }
+  display: none; }
+  #screensaver .flex {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column; }
+    #screensaver .flex .item {
+      font-size: 10vw;
+      line-height: 1em; }
+      #screensaver .flex .item.move {
+        color: white;
+        text-align: center;
+        transform-origin: right;
+        white-space: nowrap; }
+        #screensaver .flex .item.move.accr {
+          animation: screensaver 7s linear 0s infinite alternate; }
+        #screensaver .flex .item.move.time {
+          animation: screensaver 6s linear 0s infinite  alternate; }
+      #screensaver .flex .item:nth-child(odd) {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flexbox;
+        display: flex;
+        justify-content: space-between; }
 
 @keyframes screensaver {
   0% {
@@ -2810,6 +2783,56 @@ header {
     transform: translate(0, 0); }
   100% {
     transform: translate(-100%, 0); } }
+.liste-images {
+  min-height: 100vh;
+  display: grid;
+  /* 1 */
+  grid-auto-rows: 100px;
+  /* 2 */
+  grid-gap: 0px;
+  /* 3 */
+  grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
+  /* 4 */ }
+  .liste-images .item-image {
+    background-color: white;
+    position: relative; }
+    .liste-images .item-image.small {
+      grid-row: span 2; }
+    .liste-images .item-image.medium {
+      grid-row: span 3; }
+    .liste-images .item-image.large {
+      grid-row: span 4; }
+    .liste-images .item-image figure {
+      text-align: center;
+      padding: 0 1em;
+      height: 100%;
+      display: flex; }
+      .liste-images .item-image figure img {
+        margin: auto;
+        max-width: 100%;
+        max-height: 100%;
+        transition: all 0.2s ease-in-out 0s; }
+    .liste-images .item-image .overlay {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      text-align: center;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      padding: 20px;
+      opacity: 0;
+      transition: all 0.2s ease-in-out 0s; }
+      .liste-images .item-image .overlay .title {
+        font-size: 30px; }
+    .liste-images .item-image:hover .overlay {
+      opacity: 1; }
+
 .contributors {
   margin-bottom: 40px;
   column-count: 4; }
