--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -9,7 +9,7 @@ html(lang='en')
     block js
       if ENV_DEVELOPMENT
         script(src='http://localhost:35729/livereload.js')
-      script(src='/js/modernizr.min.js')
+      script(src='/js/vendor/modernizr.min.js')
   body.loading
 
     #page
@@ -22,14 +22,16 @@ html(lang='en')
       include footer
 
 
-    script(src='/js/jquery.min.js')
-    script(src='/js/_plugins.js')
-    script(src='/js/smooth-state.js')
-    script(src='/js/search-controller.js')
-    script(src='/js/scroll-controller.js')
-    script(src='/js/mobile-controller.js')
-    script(src='/js/screensaver-controller.js')
+    script(src='/js/vendor/jquery.min.js')
+    
+    //- script(src='/js/vendor/smooth-state.js')
+    script(src='/js/functions.min.js')
+    //- script(src='/js/search-controller.js')
+    //- script(src='/js/scroll-controller.js')
+    //- script(src='/js/mobile-controller.js')
+    //- script(src='/js/screensaver-controller.js')
 
-    script(src='/js/app.js')
+    //-script(src='/js/app.js')
+
     if title == "pull"
       script(src='/js/pull.js')
