--- a/app/views/about.jade
+++ b/app/views/about.jade
@@ -11,7 +11,7 @@ block content
             | If you wish to submit join the  → <a href="https://www.facebook.com/groups/393558204075688" target="_blank">GROUP</a>.
 
         p 
-            | This website is a proposition from <a href="https://www.facebook.com/groups/393558204075688" target="_blank">Ahmed Ghazi</a>, coded by himself & designed by <a href="http://www.hervethomas.com" target="_blank">Thomas Hervé</a>, under the vision of <a href="https://www.facebook.com/ZimmerhacklSebastian" target="_blank">Sebastian Zimmerhackl</a>.
+            | This website is a proposition from <a href="https://www.facebook.com/groups/393558204075688" target="_blank">Ahmed Ghazi</a>, coded by himself & designed by <a href="http://www.hervethomas.com" target="_blank">Thomas Hervé</a>, under the vision of <a href="http://selam-x.com" target="_blank">Sebastian Zimmerhackl</a>.
 
         p 
             | All rights reserved ©2018 CCWA.<br/>
