--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -32,6 +32,13 @@ html(lang='en')
     //- script(src='/js/screensaver-controller.js')
 
     //-script(src='/js/app.js')
+    script(async src="https://www.googletagmanager.com/gtag/js?id=UA-128764213-1")
+    script.
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-128764213-1');
 
     if title == "pull"
       script(src='/js/pull.js')
